<resources>
    <string name="app_name">리틀팍스 팍스스쿨</string>
    <string name="title_play_list_title">재생목록</string>
    <string name="title_play_speed_title">재생속도</string>
    <string name="title_quiz">퀴즈</string>
    <string name="title_introduce">소개</string>
    <string name="text_no_select">선택안함</string>
    <string name="text_all">전체</string>
    <string name="text_confirm">확인</string>
    <string name="text_cancel">취소</string>
    <string name="text_select_bookshelf">책장 선택</string>
    <string name="text_select_continuous_listening">이어듣기 선택</string>
    <string name="text_not_have_interval">간격 없음</string>
    <string name="text_original_translate">원문/해석</string>
    <string name="text_original_text">원문</string>
    <string name="text_wordbook">단어장</string>
    <string name="text_contain_bookshelf">책장 담기</string>
    <string name="text_ebook">eBook</string>
    <string name="text_starwords">스타워즈</string>
    <string name="text_crossword">크로스워드 퍼즐</string>
    <string name="text_select_vocabulary">단어장 선택</string>
    <string name="text_sec_interval">%d초 간격</string>
    <string name="text_delete">삭제</string>
    <string name="text_subscribe">회비결제</string>
    <string name="text_replay">다시보기</string>
    <string name="text_next_video">다음편 보기</string>
    <string name="text_membership">회원가입</string>
    <string name="text_preview">미리보기...</string>
    <string name="text_second">초</string>
    <string name="text_retry">재시도</string>
    <string name="text_close">닫기</string>
    <string name="text_words">단어</string>
    <string name="text_meaning">뜻</string>
    <string name="text_example">예문</string>
    <string name="text_select_all">전체 선택</string>
    <string name="text_select_play">선택 재생</string>
    <string name="text_add_bookshelf">책장 추가</string>
    <string name="text_manage_bookshelf">책장 관리</string>
    <string name="text_add_vocabulary">단어장 추가</string>
    <string name="text_manage_vocabulary">단어장 관리</string>
    <string name="text_stop_play">그만듣기</string>
    <string name="text_select_init">선택 해제</string>
    <string name="text_levels">단계별</string>
    <string name="text_categories">주제별</string>
    <string name="text_bookshelf">나의 책장</string>
    <string name="text_vocabulary">나의 단어장</string>
    <string name="text_count_level">%d 단계</string>
    <string name="text_count_stories">%s편</string>
    <string name="text_count_series_stories">%s부작</string>
    <string name="text_count_songs">%s곡</string>
    <string name="text_login">로그인</string>
    <string name="text_payment_membership">유료회원가입</string>
    <string name="text_learning_log">학습기록</string>
    <string name="text_record_history">녹음기록</string>
    <string name="text_homework_manage">숙제 관리</string>
    <string name="text_school_news">학교 소식</string>
    <string name="text_foxschool_news">팍스스쿨 소식</string>
    <string name="text_teacher_manual">교사 메뉴얼</string>
    <string name="text_home_newspaper">가정 통신문</string>
    <string name="text_my_info">나의 정보</string>
    <string name="text_news">새소식</string>
    <string name="text_faqs">자주 묻는 질문</string>
    <string name="text_about_us">서비스 소개</string>
    <string name="text_1_1_ask">1:1 문의하기</string>
    <string name="text_about_app">앱 이용안내</string>
    <string name="text_logout">로그아웃</string>
    <string name="text_character">Character</string>
    <string name="text_creators">Creators</string>
    <string name="text_time">Time</string>
    <string name="text_score">Score</string>
    <string name="text_correct">Correct</string>
    <string name="text_incorrect">Incorrect</string>
    <string name="text_start">Start</string>
    <string name="text_next">Next</string>
    <string name="text_savescore">Save Score</string>
    <string name="text_tryagain">Try Again</string>
    <string name="text_version">버전</string>
    <string name="text_update">업데이트</string>
    <string name="text_service_terms_use">서비스 이용약관</string>
    <string name="text_privacy_policy">개인정보 처리방침</string>
    <string name="text_my_info_change">나의 정보 수정</string>
    <string name="text_password_change_guide">비밀번호 변경 안내</string>
    <string name="text_recorder">녹음기</string>
    <string name="text_leave">나가기</string>
    <string name="text_change_permission">권한 변경하기</string>
    <string name="text_register">등록</string>
    <string name="text_change">수정</string>
    <string name="text_remaining_day">남은 기간 : <font color="#FFE400">%d일</font></string>
    <string name="text_remaining_day_name">Valid until</string>
    <string name="text_foxschool_introduce">팍스스쿨 소개</string>
    <string name="text_customer_number">고객센터 02-538-8770</string>
    <string name="text_school_search">학교 검색</string>
    <string name="text_email_id_input">이메일 또는 아이디 입력</string>
    <string name="text_id_input">아이디 입력</string>
    <string name="text_password_input">비밀번호 입력</string>
    <string name="text_auto_login">로그인 상태 유지</string>
    <string name="text_find_login">아이디 찾기</string>
    <string name="text_find_passoword">비밀번호 찾기</string>
    <string name="text_flashcards">플래시카드</string>
    <string name="text_introduction">Introduction</string>
    <string name="text_auto_play">이어보기</string>
    <string name="text_story">동화</string>
    <string name="text_song">동요</string>
    <string name="text_input_search">검색어를 입력해주세요.</string>
    <string name="text_look_up">조회</string>
    <string name="text_search">검색</string>
    <string name="text_result_empty">결과가 없습니다.</string>
    <string name="text_setting">설정</string>
    <string name="text_bio_login">지문인증 로그인</string>
    <string name="text_bio_login_info">기기에 등록된 지문으로 로그인 하려면 ON으로 설정하세요.</string>
    <string name="text_push">알림</string>
    <string name="text_push_info">푸시 메시지를 수신하려면 ON으로 설정하세요.</string>
    <string name="text_change_info">정보 수정</string>
    <string name="text_change_password">비밀번호 변경</string>
    <string name="text_id">아이디</string>
    <string name="text_name">이름</string>
    <string name="text_email">이메일</string>
    <string name="text_class_name">반 이름</string>
    <string name="text_save">저장</string>
    <string name="text_mobile_number">휴대폰 번호</string>
    <string name="text_spinner_hint">선택</string>
    <string name="text_option">(선택)</string>
    <string name="text_password">비밀번호</string>
    <string name="text_new_password">새 비밀번호 (영문, 숫자 조합 6~16자)</string>
    <string name="text_new_password_confirm">새 비밀번호 확인</string>
    <string name="text_change_later">다음에 변경</string>
    <string name="text_keep_password"><u>현재의 비밀번호로 유지</u></string>
    <string name="text_student_class_unassigned">(미배정)</string>
    <string name="text_student_class_grade">%d학년</string>
    <string name="text_student_class_class">%s반</string>
    <string name="text_item_count_question"><![CDATA[<b>%d</b>/%d]]></string>
    <string name="text_study_word"><![CDATA[<font color=\'#FFFF52\'><b>단어로</b></font> 학습하기]]></string>
    <string name="text_study_meaning"><![CDATA[<font color=\'#FFFF52\'><b>뜻으로</b></font> 학습하기]]></string>
    <string name="text_flashcard_auto_mode">자동 넘기기</string>
    <string name="text_flashcard_shuffle_mode">섞어 보기</string>
    <string name="text_auto_mode_interval">자동 넘기기 간격</string>
    <string name="text_study_flashcard_replay">다시 학습하기</string>
    <string name="text_study_flashcard_bookmark">찜 단어 학습하기</string>
    <string name="text_save_my_books">나의 단어장에 저장</string>
    <string name="text_1on1_spinner_hint">문의 유형 선택</string>
    <string name="text_1on1_send_email">이메일로 의견 보내기</string>
    <string name="text_calendar_sunday">일</string>
    <string name="text_calendar_monday">월</string>
    <string name="text_calendar_tuesday">화</string>
    <string name="text_calendar_wednesday">수</string>
    <string name="text_calendar_thursday">목</string>
    <string name="text_calendar_friday">금</string>
    <string name="text_calendar_saturday">토</string>
    <string name="text_study_date">학습일시</string>
    <string name="text_homework_status">숙제 현황</string>
    <string name="text_homework_status_detail">숙제 현황 상세 보기</string>
    <string name="text_homework_student_comment">학습자 한마디</string>
    <string name="text_homework_teacher_comment">선생님 한마디</string>
    <string name="text_homework_list">숙제 목록</string>
    <string name="text_homework_check">숙제 검사</string>
    <string name="text_homework_contents">숙제 내용</string>
    <string name="text_homework_comment_write">작성</string>
    <string name="text_homework_comment_watch">보기</string>
    <string name="text_homework_excellent">참 잘했어요. </string>
    <string name="text_homework_good">잘했어요. </string>
    <string name="text_homework_try_again">좀 더 노력하세요. </string>
    <string name="text_homework_all_eval">v 일괄 숙제 검사</string>
    <string name="text_homework_detail">숙제 현황 상세 보기</string>
    <string name="text_homework_eval_change">검사 수정</string>
    <string name="text_homework_eval_e0">참 잘했어요</string>
    <string name="text_homework_eval_e1">잘했어요</string>
    <string name="text_homework_eval_e2">좀 더 노력해요</string>
    <string name="text_homework_comment_option">선택사항(50자 이내)</string>
    <string name="text_comment_to_teacher">선생님께 하고 싶은 이야기가 있을 때 작성해 주세요. (200자 이내)</string>
    <string name="text_record_remain_date">일 남음</string>
    <string name="text_record_expired">기간 만료</string>
    <string name="message_menu_login_message">Hello,\n로그인해주세요.</string>
    <string name="message_preview_remain_day_end">미리보기가 종료되었습니다.\n회비결제 후 모든 콘텐츠를 이용해보세요.</string>
    <string name="message_preview_free_user_end">미리보기가 종료되었습니다.\n회원가입 후 모든 콘텐츠를 이용해 보세요.</string>
    <string name="message_toast_network_error">"네트워크에 접속할 수 없습니다.\n네트워크 연결 상태를 확인해 주세요."</string>
    <string name="message_payment_service_paid_using">유료 서비스 입니다. 회비결제 후 이용해주세요.</string>
    <string name="message_payment_service_login">유료회원 전용 서비스입니다. 로그인 후 이용해주세요.</string>
    <string name="message_lock_on">화면을 잠그려면 3초간 눌러주세요</string>
    <string name="message_lock_off">잠금을 해제하려면 3초간 눌러주세요</string>
    <string name="message_longtime_play_warning">"오랜 시간 동안 영상을 시청하셨습니다. 잠시 쉬는 시간을 가져보세요. 영상을 계속 시청하시겠습니까?"</string>
    <string name="message_success_save_contents_in_bookshelf">책장에 등록되었습니다.</string>
    <string name="message_not_have_play_vocabulary">재생할 단어가 없습니다.</string>
    <string name="message_select_words_put_in_vocabulary">단어장에 저장할 단어를 선택해 주세요.</string>
    <string name="message_select_words_delete_in_vocabulary">삭제할 단어를 선택해주세요.</string>
    <string name="message_question_delete_contents_in_vocabulary">선택하신 단어를 단어장에서 삭제하시겠습니까?</string>
    <string name="message_question_delete_contents_in_bookshelf">선택하신 컨텐츠를 책장에서 삭제하시겠습니까?</string>
    <string name="message_success_save_contents_in_vocabulary">단어장에 등록되었습니다.</string>
    <string name="message_not_add_selected_contents_bookshelf">책장에 담을 콘텐츠를 선택해 주세요.</string>
    <string name="message_success_delete_contents">삭제되었습니다.</string>
    <string name="message_try_logout">로그아웃 하시겠습니까?</string>
    <string name="message_check_end_app">앱을 종료하시겠습니까？</string>
    <string name="message_empty_bookshelf_contents">책장에 담겨있는 콘텐츠가 없습니다.</string>
    <string name="message_empty_vocabulary_contents">콘텐츠가 없습니다.</string>
    <string name="message_maximum_bookshelf">책장은 10개까지 생성할 수 있습니다.</string>
    <string name="message_sorting_manage_bookshelf">책장 순서는 PC에서 변경할 수 있습니다.</string>
    <string name="message_maximum_vocabulary">단어장은 10개까지 생성할 수 있습니다.</string>
    <string name="message_sorting_manage_vocabulary">단어장 순서는 PC에서 변경할 수 있습니다.</string>
    <string name="message_delete_vocabulary">단어장 삭제 시 등록된 콘텐츠가 모두 삭제됩니다. \n삭제하시겠습니까?</string>
    <string name="message_delete_bookshelf">책장 삭제 시 등록된 콘텐츠가 모두 삭제됩니다.\n삭제하시겠습니까?</string>
    <string name="message_intro_foxschool">팍스스쿨 회원 전용 앱입니다.\n회원가입은 서비스 신청 후 PC웹에서 가능합니다.</string>
    <string name="message_login_not_yet_subscribe">아직 리틀팍스 회원이 아니신가요?</string>
    <string name="message_login_littlefox_information">리틀팍스는 유료회원가입을 하지 않아도 \n약 350 편의 콘텐츠를 무료로 체험하실 수 있습니다.</string>
    <string name="message_comment_teacher">숙제 등록 및 수정, 선생님 한마디는 PC에서 작성 가능 합니다.</string>
</resources>