<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix, NewApi"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:scale_base_width="1920"
        app:scale_base_height="30"></com.ssomai.android.scalablelayout.ScalableLayout>

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:id="@+id/_contentsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:scale_base_width="1920"
        app:scale_base_height="650">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/box_list"
            app:scale_left="480"
            app:scale_top="0"
            app:scale_width="960"
            app:scale_height="650"/>
        <ImageView
            android:id="@+id/_inputIdEditBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box_list"
            app:scale_left="562"
            app:scale_top="110"
            app:scale_width="796"
            app:scale_height="84"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_id"
            android:scaleType="centerInside"
            app:scale_left="583"
            app:scale_top="132"
            app:scale_width="47"
            app:scale_height="40"/>
        <EditText
            android:id="@+id/_inputIdEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/text_email_id_input"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:background="@null"
            app:scale_left="651"
            app:scale_top="110"
            app:scale_width="618"
            app:scale_height="84"
            app:scale_textsize="28"/>

        <ImageView
            android:id="@+id/_inputPasswordEditBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box_list"
            app:scale_left="562"
            app:scale_top="224"
            app:scale_width="796"
            app:scale_height="84"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_lock"
            android:scaleType="centerInside"
            app:scale_left="583"
            app:scale_top="245"
            app:scale_width="47"
            app:scale_height="40"/>
        <EditText
            android:id="@+id/_inputPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_input"
            android:gravity="center"
            android:singleLine="true"
            android:inputType="textPassword"
            android:background="@null"
            app:scale_left="651"
            app:scale_top="224"
            app:scale_width="618"
            app:scale_height="84"
            app:scale_textsize="28"/>

        <ImageView
            android:id="@+id/_autoLoginIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/check_off"
            android:scaleType="centerInside"
            app:scale_left="840"
            app:scale_top="348"
            app:scale_width="44"
            app:scale_height="44"/>

        <TextView
            android:id="@+id/_autoLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auto_login"
            android:textColor="@color/color_444444"
            android:gravity="center_vertical"
            app:scale_left="906"
            app:scale_top="348"
            app:scale_width="400"
            app:scale_height="44"
            app:scale_textsize="26"/>

        <TextView
            android:id="@+id/_loginButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:textColor="@color/color_ffffff"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:background="@drawable/btn_b1_tablet"
            android:gravity="center"
            app:scale_left="684"
            app:scale_top="412"
            app:scale_width="550"
            app:scale_height="83"
            app:scale_textsize="30" />

        <TextView
            android:id="@+id/_forgetIDText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_find_login"
            android:textColor="@color/color_444444"
            android:gravity="center_vertical"
            app:scale_left="780"
            app:scale_top="545"
            app:scale_width="170"
            app:scale_height="70"
            app:scale_textsize="26"
            />

        <ImageView
            android:id="@+id/_forgetDividerLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@color/color_444444"
            android:scaleType="fitXY"
            app:scale_left="955"
            app:scale_top="565"
            app:scale_width="2"
            app:scale_height="30"/>

        <TextView
            android:id="@+id/_forgetPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_find_passoword"
            android:textColor="@color/color_444444"
            android:gravity="center_vertical"
            app:scale_left="995"
            app:scale_top="545"
            app:scale_width="250"
            app:scale_height="70"
            app:scale_textsize="26"
            />

    </com.ssomai.android.scalablelayout.ScalableLayout>
    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:scale_base_width="1920"
        app:scale_base_height="32">
    </com.ssomai.android.scalablelayout.ScalableLayout>

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:scale_base_width="1920"
        app:scale_base_height="382">
        <TextView
            android:id="@+id/_onlyWebSignPossibleTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_login_not_yet_subscribe"
            android:textColor="@color/color_2e3192"
            android:gravity="center"
            app:scale_left="480"
            app:scale_top="0"
            app:scale_width="960"
            app:scale_height="60"
            app:scale_textsize="28"/>
        <TextView
            android:id="@+id/_customerCenterInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_login_littlefox_information"
            android:textColor="@color/color_2e3192"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4dp"
            app:scale_left="480"
            app:scale_top="70"
            app:scale_width="960"
            app:scale_height="80"
            app:scale_textsize="28"/>

        <TextView
            android:id="@+id/_signButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_membership"
            android:textColor="@color/color_23a3e5"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:background="@drawable/btn_bl_tablet"
            android:gravity="center"
            app:scale_left="810"
            app:scale_top="184"
            app:scale_width="300"
            app:scale_height="83"
            app:scale_textsize="30"/>
    </com.ssomai.android.scalablelayout.ScalableLayout>

</LinearLayout>