<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/_mainBaseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_edeef2"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:ignore="MissingPrefix, NewApi">

    <com.ssomai.android.scalablelayout.ScalableLayout
        android:id="@+id/_commentInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:scale_base_width="1080"
        app:scale_base_height="1704">

        <TextView
            android:id="@+id/_commentInputCountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:text="0/400 byte"
            android:textColor="@color/color_b7b7b7"
            android:visibility="gone"
            app:scale_width="994"
            app:scale_height="116"
            app:scale_left="43"
            app:scale_top="24"
            app:scale_textsize="40"/>

        <TextView
            android:id="@+id/_commentTeacherMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/message_comment_teacher"
            android:textColor="@color/color_666666"
            android:visibility="gone"
            app:scale_width="994"
            app:scale_height="116"
            app:scale_left="31"
            app:scale_top="0"
            app:scale_textsize="36"/>

        <ImageView
            android:id="@+id/_commentBoxImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_box"
            app:scale_left="28"
            app:scale_top="60"
            app:scale_width="1020"
            app:scale_height="350" />

        <EditText
            android:id="@+id/_commentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/text_comment_to_teacher"
            android:inputType="textMultiLine"
            android:textColorHint="@color/color_b7b7b7"
            android:textColor="@color/color_444444"
            android:visibility="gone"
            app:scale_left="62"
            app:scale_top="105"
            app:scale_width="952"
            app:scale_height="270"
            app:scale_textsize="40"/>

        <TextView
            android:id="@+id/_commentRegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_box_gray_84"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/text_register"
            android:textColor="@color/color_ffffff"
            android:visibility="gone"
            android:enabled="false"
            app:scale_left="100"
            app:scale_top="570"
            app:scale_width="880"
            app:scale_height="120"
            app:scale_textsize="42" />

        <TextView
            android:id="@+id/_commentUpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_box_gray_84"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/text_change"
            android:textColor="@color/color_ffffff"
            android:visibility="gone"
            android:enabled="false"
            app:scale_left="100"
            app:scale_top="570"
            app:scale_width="424"
            app:scale_height="120"
            app:scale_textsize="42" />

        <TextView
            android:id="@+id/_commentDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_box_empty_light_blue_84"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/text_delete"
            android:textColor="@color/color_29c8e6"
            android:visibility="gone"
            app:scale_left="556"
            app:scale_top="570"
            app:scale_width="424"
            app:scale_height="120"
            app:scale_textsize="42" />

    </com.ssomai.android.scalablelayout.ScalableLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>